# linreg_analysis

./: HumanBrain_WeightandHead_size.csv:Zone.Identifier  README.md  boston_housing.csv:Zone.Identifier  package.xml  setup.cfg  setup.py
data/: new_height_weight.csv:Zone.Identifier
linreg_analysis/: linear_regression_boston_node.py  linear_regression_brain_node.py  linear_regression_height_weight.py
